force-app/main/default/objects/Assessment__c/fields/EITC_Self_Report__c.field-meta.xml
<CustomField>
    <fullName>EITC_Self_Report__c</fullName>
    <label>EITC (Self Report)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>