force-app/main/default/objects/Assessment__c/fields/Employment_Amount_Self_Report__c.field-meta.xml
<CustomField>
    <fullName>Employment_Amount_Self_Report__c</fullName>
    <label>Employment Amount (Self Report)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>