force-app/main/default/objects/Assessment__c/fields/ESLWhereTaken__c.field-meta.xml
<CustomField>
    <fullName>ESLWhereTaken__c</fullName>
    <label>ESL — Where Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>