force-app/main/default/objects/Assessment__c/fields/Expected_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Out_Date__c</fullName>
    <label>Expected Out Date</label>
    <type>Date</type>
</CustomField>