force-app/main/default/objects/Assessment__c/fields/Extensions_Available__c.field-meta.xml
<CustomField>
    <fullName>Extensions_Available__c</fullName>
    <label>Extensions Available?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>