force-app/main/default/objects/Assessment__c/fields/Follow_through__c.field-meta.xml
<CustomField>
    <fullName>Follow_through__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Employed student has followed through on commitments and is good for his/her word.
-Has shown consistent follow-up and reporting as assigned by IDS</inlineHelpText>
    <label>Follow-through</label>
    <type>Checkbox</type>
</CustomField>