force-app/main/default/objects/Assessment__c/fields/Food_Stamps__c.field-meta.xml
<CustomField>
    <fullName>Food_Stamps__c</fullName>
    <label>Food Stamps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>