force-app/main/default/objects/Assessment__c/fields/Food_Stamps_Amount_Self_Report_Update__c.field-meta.xml
<CustomField>
    <fullName>Food_Stamps_Amount_Self_Report_Update__c</fullName>
    <label>Food Stamps Amount (Self Report)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>