force-app/main/default/objects/Assessment__c/fields/Gasoline__c.field-meta.xml
<CustomField>
    <fullName>Gasoline__c</fullName>
    <label>Gasoline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>