force-app/main/default/objects/Assessment__c/fields/General_Assistance_Amount_Self_Report__c.field-meta.xml
<CustomField>
    <fullName>General_Assistance_Amount_Self_Report__c</fullName>
    <label>General Assistance Amount (Self Report)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>