force-app/main/default/objects/Assessment__c/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <description>ECMv1 required field.</description>
    <label>Goals</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>