force-app/main/default/objects/Assessment__c/fields/Groceries__c.field-meta.xml
<CustomField>
    <fullName>Groceries__c</fullName>
    <label>Groceries</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>