force-app/main/default/objects/Assessment__c/fields/HandlingStressLevels__c.field-meta.xml
<CustomField>
    <fullName>HandlingStressLevels__c</fullName>
    <inlineHelpText>On a scale of 1 - 5 how do/did you handle stressful situations in the workplace? (1 = Not well, 5 = Handle stressful situations well)</inlineHelpText>
    <label>Handling Stress Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>