force-app/main/default/objects/Assessment__c/fields/Has_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Has_Bank_Account__c</fullName>
    <label>Has Bank Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>