force-app/main/default/objects/Assessment__c/fields/Have_you_ever_been_convicted_of_a_crime__c.field-meta.xml
<CustomField>
    <fullName>Have_you_ever_been_convicted_of_a_crime__c</fullName>
    <label>Have you ever been convicted of a crime?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>