force-app/main/default/objects/Assessment__c/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Student is in stable/good health. 
-Health is managed in a way that does not distract from other aspects of his/her life.
-If applicable, student is stable in recovery plan, med compliant, and a support system is in place for mental health issues.</inlineHelpText>
    <label>Health</label>
    <type>Checkbox</type>
</CustomField>