force-app/main/default/objects/Assessment__c/fields/HighSchoolDiplomaGED__c.field-meta.xml
<CustomField>
    <fullName>HighSchoolDiplomaGED__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Student has High School Diploma/GED, is in process of obtaining, or is signed up for coursework.</inlineHelpText>
    <label>High School Diploma/GED</label>
    <type>Checkbox</type>
</CustomField>