force-app/main/default/objects/Assessment__c/fields/HobbiesFunActivities__c.field-meta.xml
<CustomField>
    <fullName>HobbiesFunActivities__c</fullName>
    <inlineHelpText>What do you enjoy doing for fun? Do you have any hobbies?</inlineHelpText>
    <label>Hobbies / Fun Activities</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>