force-app/main/default/objects/Assessment__c/fields/HourlyWageExpectation__c.field-meta.xml
<CustomField>
    <fullName>HourlyWageExpectation__c</fullName>
    <label>Hourly Wage Expectation</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>