force-app/main/default/objects/Assessment__c/fields/Housing__c.field-meta.xml
<CustomField>
    <fullName>Housing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Student is in a stable living situation. 
-Quality of housing is not a distraction from other aspects of personal or professional life.
-Relationship with other household members well managed.
-In position to take on new living situation with savings.</inlineHelpText>
    <label>Housing</label>
    <type>Checkbox</type>
</CustomField>