force-app/main/default/objects/Assessment__c/fields/Housing_Available_Until__c.field-meta.xml
<CustomField>
    <fullName>Housing_Available_Until__c</fullName>
    <description>Removed from Assessment layout in Nov 2018 as part of Incoming Participant Data cleanup. Information now captured in &apos;Housing Narrative&apos;.</description>
    <inlineHelpText>Enter date and/or notes</inlineHelpText>
    <label>x Housing Available Until</label>
    <length>100</length>
    <type>Text</type>
</CustomField>