force-app/main/default/objects/Assessment__c/fields/Housing_Details__c.field-meta.xml
<CustomField>
    <fullName>Housing_Details__c</fullName>
    <description>Swapped field dependency between &apos;Housing Type&apos; and &apos;Housing Details&apos; in Nov 2018 as part of Incoming Participant Data cleanup.</description>
    <label>Housing Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shelter</fullName>
            </value>
            <value>
                <fullName>Recovery home</fullName>
            </value>
            <value>
                <fullName>Emergency housing</fullName>
            </value>
            <value>
                <fullName>Halfway house</fullName>
            </value>
            <value>
                <fullName>Transitional housing (with specified end)</fullName>
            </value>
            <value>
                <fullName>Living with family/friend (name not on lease)</fullName>
            </value>
            <value>
                <fullName>Rental through provider</fullName>
            </value>
            <value>
                <fullName>Rental through private</fullName>
            </value>
            <value>
                <fullName>Homeownership</fullName>
            </value>
            <value>
                <fullName>Not Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>