force-app/main/default/objects/Assessment__c/fields/Housing_Name__c.field-meta.xml
<CustomField>
    <fullName>Housing_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Removed from Assessment layout and field set in Nov 2018 as part of Incoming Participant Data cleanup. Information now captured in &apos;Housing Narrative&apos;.</description>
    <label>x Housing Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assessment</relationshipLabel>
    <relationshipName>Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>