force-app/main/default/objects/Assessment__c/fields/Housing_Type__c.field-meta.xml
<CustomField>
    <fullName>Housing_Type__c</fullName>
    <description>Swapped field dependency between &apos;Housing Type&apos; and &apos;Housing Details&apos; in Nov 2018 as part of Incoming Participant Data cleanup.

-Homeless includes shelters, recovery homes, emergency housing, or halfway houses
-Transitional includes transitional housing unit with specific end date or staying with family/friend
-Permanent includes independent housing without specific end date</description>
    <inlineHelpText>Depends on Housing Details</inlineHelpText>
    <label>Housing Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Housing_Details__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Homeless</fullName>
            </value>
            <value>
                <fullName>Transitional</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>