force-app/main/default/objects/Assessment__c/fields/Housing_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Housing_Type_Formula__c</fullName>
    <description>Created in Nov 2018 as part of Incoming Participant Data cleanup in case Housing Type picklist option is not selected.</description>
    <formula>if ( 

or ( ispickval(Housing_Details__c, &quot;Rental through provider&quot;), ispickval(Housing_Details__c, &quot;Rental through private&quot;), ispickval(Housing_Details__c, &quot;Homeownership&quot;)), &quot;Permanent&quot;, 

if ( 

or ( ispickval(Housing_Details__c, &quot;Shelter&quot;), ispickval(Housing_Details__c,&quot;Recovery home&quot;), ispickval(Housing_Details__c,&quot;Emergency housing&quot;), ispickval(Housing_Details__c,&quot;Halfway house&quot;)), &quot;Homeless&quot;, 

if ( 

or ( ispickval(Housing_Details__c, &quot;Transitional housing (with specified end)&quot;), ispickval(Housing_Details__c, &quot;Living with family/friend (name not on lease)&quot;)), &quot;Transitional&quot;, 

NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Type Formula</label>
    <type>Text</type>
</CustomField>