force-app/main/default/objects/Assessment__c/fields/IDS__c.field-meta.xml
<CustomField>
    <fullName>IDS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IDSAssessment1</relationshipName>
    <type>Lookup</type>
</CustomField>