force-app/main/default/objects/Assessment__c/fields/ImmediateJobGoals__c.field-meta.xml
<CustomField>
    <fullName>ImmediateJobGoals__c</fullName>
    <label>Immediate Job Goals</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ImmediateJobInterests__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AgriculturalInspectors</fullName>
                <label>Agricultural Inspectors</label>
            </value>
            <value>
                <fullName>AgriculturalScientists</fullName>
                <label>Agricultural Scientists</label>
            </value>
            <value>
                <fullName>AnimalScientists</fullName>
                <label>Animal Scientists</label>
            </value>
            <value>
                <fullName>AquacultureWorkers</fullName>
                <label>Aquaculture Workers</label>
            </value>
            <value>
                <fullName>ConservationScientists</fullName>
                <label>Conservation Scientists</label>
            </value>
            <value>
                <fullName>FarmManagers</fullName>
                <label>Farm Managers</label>
            </value>
            <value>
                <fullName>FishandGameWardens</fullName>
                <label>Fish and Game Wardens</label>
            </value>
            <value>
                <fullName>Foresters</fullName>
            </value>
            <value>
                <fullName>FoodScientists</fullName>
                <label>Food Scientists</label>
            </value>
            <value>
                <fullName>GreenhouseManagers</fullName>
                <label>Greenhouse Managers</label>
            </value>
            <value>
                <fullName>Horticulturists</fullName>
            </value>
            <value>
                <fullName>LandscapeArchitects</fullName>
                <label>Landscape Architects</label>
            </value>
            <value>
                <fullName>NaturalResourceTechnicians</fullName>
                <label>Natural Resource Technicians</label>
            </value>
            <value>
                <fullName>RangeManagers</fullName>
                <label>Range Managers</label>
            </value>
            <value>
                <fullName>SoilConservationists</fullName>
                <label>Soil Conservationists</label>
            </value>
            <value>
                <fullName>WildlifeBiologists</fullName>
                <label>Wildlife Biologists</label>
            </value>
            <value>
                <fullName>Zoologists</fullName>
            </value>
            <value>
                <fullName>Brickmasons</fullName>
            </value>
            <value>
                <fullName>BuildingInspectors</fullName>
                <label>Building Inspectors</label>
            </value>
            <value>
                <fullName>CarpenterApprentices</fullName>
                <label>Carpenter Apprentices</label>
            </value>
            <value>
                <fullName>Carpenters</fullName>
            </value>
            <value>
                <fullName>CementMasons</fullName>
                <label>Cement Masons</label>
            </value>
            <value>
                <fullName>CivilDrafters</fullName>
                <label>Civil Drafters</label>
            </value>
            <value>
                <fullName>ConstructionLaborers</fullName>
                <label>Construction Laborers</label>
            </value>
            <value>
                <fullName>ConstructionManagers</fullName>
                <label>Construction Managers</label>
            </value>
            <value>
                <fullName>CostEstimators</fullName>
                <label>Cost Estimators</label>
            </value>
            <value>
                <fullName>Electricians</fullName>
            </value>
            <value>
                <fullName>FlooringInstallers</fullName>
                <label>Flooring Installers</label>
            </value>
            <value>
                <fullName>HVACTechnicians</fullName>
                <label>HVAC Technicians</label>
            </value>
            <value>
                <fullName>InsulationWorkers</fullName>
                <label>Insulation Workers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>