force-app/main/default/objects/Assessment__c/fields/IncarcerationClasses__c.field-meta.xml
<CustomField>
    <fullName>IncarcerationClasses__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If long-term incarceration, did you participate in any classes or training while incarcerated?</inlineHelpText>
    <label>Incarceration Classes</label>
    <type>Checkbox</type>
</CustomField>