force-app/main/default/objects/Assessment__c/fields/IncarcerationProgramCredential__c.field-meta.xml
<CustomField>
    <fullName>IncarcerationProgramCredential__c</fullName>
    <inlineHelpText>If so, what program(s) and did you earn a credential (certificate/degree/license)?</inlineHelpText>
    <label>Incarceration Program / Credential</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>