force-app/main/default/objects/Assessment__c/fields/JobSearchSteps__c.field-meta.xml
<CustomField>
    <fullName>JobSearchSteps__c</fullName>
    <inlineHelpText>What steps have you taken already to look for work? [select all that apply]</inlineHelpText>
    <label>Job Search Steps Already Taken</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ResumeCompletedInProgress</fullName>
                <label>I have started or completed my resume.</label>
            </value>
            <value>
                <fullName>AppliedOnline</fullName>
                <label>I have looked for jobs online.</label>
            </value>
            <value>
                <fullName>AppliedInPerson</fullName>
                <label>I have applied for positions.</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other: fill in the blank</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>