force-app/main/default/objects/Assessment__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <inlineHelpText>This rating should be based on caregiver’s knowledge of specific strengths, needs, development, legal rights, and supports of individual in his/her care, as well as the caregiver’s ability to understand rationale for the treatment/management of needs.</inlineHelpText>
    <label>Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>