force-app/main/default/objects/Assessment__c/fields/KnowsLocalTrainingProviders__c.field-meta.xml
<CustomField>
    <fullName>KnowsLocalTrainingProviders__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you know who in our area provides training in this field?</inlineHelpText>
    <label>Knows Local Training Providers</label>
    <type>Checkbox</type>
</CustomField>