force-app/main/default/objects/Assessment__c/fields/LastJobAcknowledgments__c.field-meta.xml
<CustomField>
    <fullName>LastJobAcknowledgments__c</fullName>
    <inlineHelpText>In your last job, what did you get compliments on or were you best at?</inlineHelpText>
    <label>Last Job Acknowledgments</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>