force-app/main/default/objects/Assessment__c/fields/Laundry__c.field-meta.xml
<CustomField>
    <fullName>Laundry__c</fullName>
    <label>Laundry</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>