force-app/main/default/objects/Assessment__c/fields/Legacy_Created_By_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Created_By_Access__c</fullName>
    <inlineHelpText>Name of staff member who created original record in Access database.</inlineHelpText>
    <label>Legacy Created By (Access)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>