force-app/main/default/objects/Assessment__c/fields/Legacy_Evaluation_ID_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Evaluation_ID_Access__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>From CLSL Evaluation table in legacy Access database.</inlineHelpText>
    <label>Legacy Evaluation ID (Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>