force-app/main/default/objects/Assessment__c/fields/Legacy_Housing_ID_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Housing_ID_Access__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>From Housing table in legacy Access database.</inlineHelpText>
    <label>Legacy Housing ID (Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>