force-app/main/default/objects/Assessment__c/fields/Lender_1_Amount_Owed__c.field-meta.xml
<CustomField>
    <fullName>Lender_1_Amount_Owed__c</fullName>
    <label>Lender 1 - Amount Owed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>