force-app/main/default/objects/Assessment__c/fields/Lender_2__c.field-meta.xml
<CustomField>
    <fullName>Lender_2__c</fullName>
    <label>Lender 2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>