force-app/main/default/objects/Assessment__c/fields/Lender_2_Amount_Owed__c.field-meta.xml
<CustomField>
    <fullName>Lender_2_Amount_Owed__c</fullName>
    <label>Lender 2 - Amount Owed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>