force-app/main/default/objects/Assessment__c/fields/Lender_2_Collections__c.field-meta.xml
<CustomField>
    <fullName>Lender_2_Collections__c</fullName>
    <label>Lender 2 - Collections</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>