force-app/main/default/objects/Assessment__c/fields/LetGoFromJob__c.field-meta.xml
<CustomField>
    <fullName>LetGoFromJob__c</fullName>
    <inlineHelpText>Have you ever been let go from a job? Why?</inlineHelpText>
    <label>Let Go From Job</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>